@@ -1304,7 +1304,7 @@ static int unsatisfiedDepend(rpmTransactionSet ts,
 	}
 	mi = rpmdbFreeIterator(mi);
 
-#ifdef DYING
+#ifndef DYING
 	mi = rpmdbInitIterator(ts->rpmdb, RPMTAG_NAME, keyName, 0);
 	(void) rpmdbPruneIterator(mi,
 			ts->removedPackages, ts->numRemovedPackages, 1);
